--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -8,71 +8,71 @@ ext {
 
     projectDependencies = [
 
-            lombok     : "org.projectlombok:lombok:$LombokVersion",
-            retrolambda: "net.orfjackal.retrolambda:retrolambda:$RetroLambdaVersion",
-            splunkMint : "com.splunk.mint:mint:$SplunkMintVersion"
+            lombok     : "org.projectlombok:lombok:1.16.6",
+            retrolambda: "net.orfjackal.retrolambda:retrolambda:2.1.0",
+//            splunkMint : "com.splunk.mint:mint:$SplunkMintVersion"
     ]
 
     appModuleDependencies = [
 
-            androidSVG                 : "com.caverock:androidsvg:$AndroidSvgVersion",
-            rxPreferences              : "com.f2prateek.rx.preferences:rx-preferences:$RxPreferencesVersion",
-            gson                       : "com.google.code.gson:gson:$GsonVersion",
-            butterknife                : "com.jakewharton:butterknife:$ButterknifeVersion",
-            fragmentArgs               : "com.hannesdorfmann.fragmentargs:annotation:$FragmentArgsVersion",
-            fragmentArgsProcessor      : "com.hannesdorfmann.fragmentargs:processor:$FragmentArgsVersion",
-            recyclerViewFlexibleDivider: "com.yqritc:recyclerview-flexibledivider:$FlexibleDividerVersion",
-            circularReveal             : "com.github.ozodrukh:CircularReveal:$CircularRevealVersion",
-            photoView                  : "com.github.chrisbanes.photoview:library:$PhotoViewVersion",
-            mosby                      : "com.hannesdorfmann.mosby:mvp:$MosbyMVPVersion",
-            mosbyViewState             : "com.hannesdorfmann.mosby:viewstate:$MosbyMVPVersion",
-            sharpSVG                   : "com.pixplicity.sharp:library:$SharpSVGVersion",
-            sectionedRecyclerView      : "com.github.afollestad:sectioned-recyclerview:$SectionedRecyclerView",
-            expandableRecyclerView     : "com.bignerdranch.android:expandablerecyclerview:$ExpandableRecyclerView",
-            sectionedRVAdapter         : "com.truizlop.sectionedrecyclerview:library:$SectionedRVAdapter"
+//            androidSVG                 : "com.caverock:androidsvg:$AndroidSvgVersion",
+//            rxPreferences              : "com.f2prateek.rx.preferences:rx-preferences:$RxPreferencesVersion",
+//            gson                       : "com.google.code.gson:gson:$GsonVersion",
+butterknife           : "com.jakewharton:butterknife:7.0.1",
+//            fragmentArgs               : "com.hannesdorfmann.fragmentargs:annotation:$FragmentArgsVersion",
+//            fragmentArgsProcessor      : "com.hannesdorfmann.fragmentargs:processor:$FragmentArgsVersion",
+//            recyclerViewFlexibleDivider: "com.yqritc:recyclerview-flexibledivider:$FlexibleDividerVersion",
+//            circularReveal             : "com.github.ozodrukh:CircularReveal:$CircularRevealVersion",
+//            photoView                  : "com.github.chrisbanes.photoview:library:$PhotoViewVersion",
+mosby                 : "com.hannesdorfmann.mosby:mvp:2.0.0",
+mosbyViewState        : "com.hannesdorfmann.mosby:viewstate:2.0.0",
+sharpSVG              : "com.pixplicity.sharp:library:1.0.1@aar",
+//            sectionedRecyclerView      : "com.github.afollestad:sectioned-recyclerview:$SectionedRecyclerView",
+expandableRecyclerView: "com.bignerdranch.android:expandablerecyclerview:2.1.0",
+//            sectionedRVAdapter         : "com.truizlop.sectionedrecyclerview:library:$SectionedRVAdapter"
     ]
 
     androidSupportDependencies = [
 
-            supportV4          : "com.android.support:support-v4:$AndroidSupportVersion",
-            supportAppCompatV7 : "com.android.support:appcompat-v7:$AndroidSupportVersion",
-            supportRecyclerView: "com.android.support:recyclerview-v7:$AndroidSupportVersion",
-            supportDesign      : "com.android.support:design:$AndroidSupportVersion",
-            supportPreferences : "com.android.support:preference-v7:$AndroidSupportVersion",
-            supportAnnotations : "com.android.support:support-annotations:$AndroidSupportVersion",
-            supportMultidex    : "com.android.support:multidex:$MultidexVersion",
-            supportPalette     : "com.android.support:palette-v7:$AndroidSupportVersion"
+//            supportV4          : "com.android.support:support-v4:23.1.1",
+supportAppCompatV7 : "com.android.support:appcompat-v7:23.1.1",
+supportRecyclerView: "com.android.support:recyclerview-v7:23.1.1",
+supportDesign      : "com.android.support:design:23.1.1",
+//            supportPreferences : "com.android.support:preference-v7:23.1.1",
+supportAnnotations : "com.android.support:support-annotations:23.1.1"
+//            supportMultidex    : "com.android.support:multidex:$MultidexVersion",
+//            supportPalette     : "com.android.support:palette-v7:23.1.1"
     ]
 
     domainDependencies = [
 
-            realmDB         : "io.realm:realm-android:$RealmDBVersion",
-            parceler        : "org.parceler:parceler-api:$ParcelerVersion",
-            parcelerCompiler: "org.parceler:parceler:$ParcelerVersion",
-            snappyDB        : "com.snappydb:snappydb-lib:$SnappyDBVersion",
-            kryo            : "com.esotericsoftware.kryo:kryo:$KryoVersion"
+//            realmDB         : "io.realm:realm-android:$RealmDBVersion",
+//            parceler        : "org.parceler:parceler-api:$ParcelerVersion",
+//            parcelerCompiler: "org.parceler:parceler:$ParcelerVersion",
+//            snappyDB        : "com.snappydb:snappydb-lib:$SnappyDBVersion",
+//            kryo            : "com.esotericsoftware.kryo:kryo:$KryoVersion"
     ]
 
     networkModuleDependencies = [
 
-            retrofit             : "com.squareup.retrofit:retrofit:$RetrofitVersion",
-            okhttpUrlConnection  : "com.squareup.okhttp:okhttp-urlconnection:$OkHttpVersion",
-            okhttp               : "com.squareup.okhttp:okhttp:$OkHttpVersion",
-            retrofitJSONConverter: "com.squareup.retrofit:converter-gson:$RetrofitVersion",
-            retrofitRxJava       : "com.squareup.retrofit:adapter-rxjava:$RetrofitVersion",
-            picasso              : "com.squareup.picasso:picasso:$PicassoVersion"
+//            retrofit             : "com.squareup.retrofit:retrofit:$RetrofitVersion",
+//            okhttpUrlConnection  : "com.squareup.okhttp:okhttp-urlconnection:$OkHttpVersion",
+//            okhttp               : "com.squareup.okhttp:okhttp:$OkHttpVersion",
+//            retrofitJSONConverter: "com.squareup.retrofit:converter-gson:$RetrofitVersion",
+//            retrofitRxJava       : "com.squareup.retrofit:adapter-rxjava:$RetrofitVersion",
+//            picasso              : "com.squareup.picasso:picasso:$PicassoVersion"
     ]
 
     generalDependencies = [
 
-            rxJava       : "io.reactivex:rxjava:$RxJavaVersion",
-            rxAndroid    : "io.reactivex:rxandroid:$RxAndroidVersion",
-            streamSupport: "net.sourceforge.streamsupport:streamsupport:$StreamSupportVersion"
+            rxJava   : "io.reactivex:rxjava:1.1.0",
+            rxAndroid: "io.reactivex:rxandroid:1.1.0",
+//            streamSupport: "net.sourceforge.streamsupport:streamsupport:$StreamSupportVersion"
     ]
 
     testDependencies = [
 
-            robotium    : "com.jayway.android.robotium:robotium-solo:$RobotiumVersion",
-            roboElectric: "org.robolectric:robolectric:$RoboElectricVersion"
+            robotium    : "com.jayway.android.robotium:robotium-solo:5.5.3",
+            roboElectric: "org.robolectric:robolectric:3.0"
     ]
 }
