--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: android
 android:
   components:
     - build-tools-23.0.1
-    - android-M
     - extra
+    - android-23
+  jdk:
+    - oraclejdk8
