--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
     ext {
         compileSdkVersion = 23
         buildToolsVersion = "23.0.2"
+        travisBuildToolsVersion = "23.0.1"
 
         versionName = "0.0.1"
         versionCode = 1
