--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,11 @@ android:
     - build-tools-23.0.1
     - extra
     - android-23
-  jdk:
-    - oraclejdk8
+jdk:
+  - oraclejdk7
+  - oraclejdk8
+
+before_install:
+  - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
+  - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
+  - export JAVA_HOME=$JAVA7_HOME
