--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,10 @@ android {
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
+
+    lintOptions {
+        abortOnError System.getenv("TRAVIS") == null
+    }
 }
 
 dependencies {
